<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_circle</name>
  <version>0.0.0</version>
  <description>drawing circle with turtlesim</description>
  <maintainer email="pby04188@naver.com">pby04188</maintainer>
  <license>Apache License 2.0</license>
  <author email="pby04188@naver.com">pby04188</author>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>msg_srv_action_interface</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
